--- a/style/moodle.css
+++ b/style/moodle.css
@@ -21797,3 +21797,78 @@ a.bg-gray:hover, a.bg-gray:focus,
 button.bg-gray:hover,
 button.bg-gray:focus {
   background-color: #cbd3da !important; }
+
+  .modal.show {
+    display: block !important;
+    height: 100% !important;
+    width: 100% !important;
+    object-fit: contain !important;
+    display: flex !important; 
+    /*position: absolute !important;*/
+    left: 50% !important;
+    top: 50% !important;
+    transform: translate(-50%, -50%) !important;
+  }
+  
+  #lbdialog .modal-content {
+    background-color: rgb(0, 0, 0) !important;
+    left: 0 !important;
+    top: 60px !important;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 0.6rem;
+    outline: 0;
+  }
+
+#lbdialog{
+	max-width: 700px !important;
+    max-height: fit-content !important;
+    margin: 1.75rem auto !important;
+}
+  
+  #lbdialog .modal-header {
+    display: none !important;
+  }
+  
+  #lbdialog .figure-caption{
+    color: white !important;
+  }
+  
+  #lbdialog .figure {
+    display: inline-block !important;;
+    color: white !important;;
+    text-overflow: ellipsis !important;;
+    overflow: hidden !important;;
+    white-space: nowrap !important;;
+    margin: 0 !important;;
+    text-align: center !important;;
+  }
+  
+  #lbdialog .modal-backdrop.show{
+    opacity: 0.75 !important;;
+  }
+  
+  #lbdialog .modal-content .modal-footer .btn.btn-default{
+    color: white !important;
+  }
+  
+    
+  @media (min-width: 576px){
+  #lbdialog .modal-dialog {
+    max-width: 700px !important;
+    max-height: fit-content !important;
+  }
+  }
+  
+  @media (min-height: 100px){
+    #lbdialog .modal-content {
+      min-width: auto !important;
+        width: 100% !important;
+        overflow-x: auto !important;
+    }
+    }
